removing non required code